catkin_ws/logs/backend/build.make.244.log.stderr
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:7:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In member function ‘const void SLAM::Frame::setNewNodeFlag() const’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:223:36: error: ‘newNode’ was not declared in this scope
  const void setNewNodeFlag()const {newNode = true;}
                                    ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In member function ‘const bool SLAM::Frame::getNewNodeFlag() const’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:225:43: error: ‘newNode’ was not declared in this scope
  const bool getNewNodeFlag()const {return newNode;}
                                           ^
make[2]: *** [CMakeFiles/frontend.dir/src/Frame.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frontend.h:18:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frontend.cpp:13:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In member function ‘const void SLAM::Frame::setNewNodeFlag() const’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:223:36: error: ‘newNode’ was not declared in this scope
  const void setNewNodeFlag()const {newNode = true;}
                                    ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In member function ‘const bool SLAM::Frame::getNewNodeFlag() const’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:225:43: error: ‘newNode’ was not declared in this scope
  const bool getNewNodeFlag()const {return newNode;}
                                           ^
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/FrameToPcConverter.h:14:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/FrameToPcConverter.cpp:7:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In member function ‘const void SLAM::Frame::setNewNodeFlag() const’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:223:36: error: ‘newNode’ was not declared in this scope
  const void setNewNodeFlag()const {newNode = true;}
                                    ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In member function ‘const bool SLAM::Frame::getNewNodeFlag() const’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:225:43: error: ‘newNode’ was not declared in this scope
  const bool getNewNodeFlag()const {return newNode;}
                                           ^
make[2]: *** [CMakeFiles/frontend.dir/src/FrameToPcConverter.cpp.o] Error 1
make[2]: *** [CMakeFiles/frontend.dir/src/Frontend.cpp.o] Error 1
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:21:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:16:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In member function ‘const void SLAM::Frame::setNewNodeFlag() const’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:223:36: error: ‘newNode’ was not declared in this scope
  const void setNewNodeFlag()const {newNode = true;}
                                    ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In member function ‘const bool SLAM::Frame::getNewNodeFlag() const’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:225:43: error: ‘newNode’ was not declared in this scope
  const bool getNewNodeFlag()const {return newNode;}
                                           ^
make[2]: *** [CMakeFiles/frontend.dir/src/Mapping.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
